--- a/books-api/src/Components/Pages/About/About.css
+++ b/books-api/src/Components/Pages/About/About.css
@@ -15,6 +15,10 @@
   opacity: 0.8;
 }
 
+.about-link {
+  text-decoration: underline;
+}
+
 @media screen and (min-width: 800px) {
   .about-content {
     grid-template-columns: repeat(2, 1fr);
